--- a/mm/sass/style.scss
+++ b/mm/sass/style.scss
@@ -17,10 +17,11 @@
 @import 'blocks/footer';
 
 @import 'blocks/title';
+@import 'blocks/temp';
+
+
 @import 'blocks/give';
 @import 'blocks/table';
-@import 'blocks/about';
-@import 'blocks/account';
 @import 'blocks/steps';
 @import 'blocks/platform';
 @import 'blocks/register';
@@ -28,7 +29,4 @@
 @import 'blocks/segregated';
 @import 'blocks/trader';
 @import 'blocks/spread';
-@import 'blocks/faq';
 @import 'blocks/content';
-@import 'blocks/signals';
-@import 'blocks/glossary';
