--- a/mm/templates/mobile.html
+++ b/mm/templates/mobile.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="trader">
+  <section class="temp  temp--trader">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -56,7 +56,7 @@
       <div class="trader__content">
         <h1>MultiplyMarket Trade Mobile</h1>
         <div class="trader__flex">
-          <div class="trader__right">
+          <div class="trader__left">
             <b>Multiply Market Trading Mobile Application:<br>The independence to trade at any time and place</b>
             <p>Don’t lag – begin making trades from your device, no matter if it’s phone or tablet, Apple or Android Multiply Market`s mobile software gives you the opportunity to invest, operate your profile and check Special MultiplyMarket’s mobile software affords you with abilities to invest, to operate personal profile and to check the newest financial tendencies with no strict attachment to time and place where you are, and without a fee. The possible potential of that software is to please every trader, whether a beginner or an advanced patron. Keywords inside of that are intuitive plain.</p>
             <p>As we have mentioned before, this software is suitable for almost all devices, whether it’s Apple or Android products.Stay informed regarding newest market processes, and act deliberately keeping to it. Place deals freely strict from your mobile.</p>
@@ -64,7 +64,7 @@
             <p>Use your mobile device to invest in a variety of financial instruments – Forex, Futures and Commodities.</p>
             <p>Try your mobile device to invest in wide range of trading instruments, such as Forex, Futures and Commodities.</p>
           </div>
-          <div class="trader__left">
+          <div class="trader__right">
             <img src="../img/mobile.png" alt=""><br>
             <a href="#">
               <img src="../img/apple.png" alt="">
