--- a/mm/templates/segregated.html
+++ b/mm/templates/segregated.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="separated">
+  <section class="segregated">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -53,10 +53,10 @@
             </ul>
           </li>
       </ul>
-      <div class="separated__content">
+      <div class="segregated__content">
         <h1>Segregated Accounts</h1>
         <p class="title__sub">The unique MultiplyMarket a Loyalty Saver Account allows their users to conduct trades perfectly safe and keeps them out of slow transaction loadings or information and payments errors. </p>
-        <div class="separated__adv">
+        <div class="segregated__adv">
           <b>Advantages:</b>
           <p>There are few more additional benefits that are shaped exactly to satisfy customers common needs. With all that major pluses, you can be sure in: </p>
           <ul>
@@ -69,7 +69,7 @@
         </div>
         <b>When will a Loyalty Saver Account be appropriated for me?</b>
         <p>It will be assigned for you in the very beginning, once you have deposited money into your account, and you will be able to speed up your trading process avoiding any needless job and paperwork. </p>
-        <div class="separated__adv">
+        <div class="segregated__adv">
           <b>Conditions for withdrawing and transmitting money</b>
           <ul>
             <li>Verification of both parties are needed to confirm the release</li>
