--- a/mm/templates/web.html
+++ b/mm/templates/web.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="trader">
+  <section class="temp  temp--trader">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
@@ -56,7 +56,7 @@
       <div class="trader__content">
         <h1>MultiplyMarket Web Trader</h1>
         <div class="trader__flex">
-          <div class="trader__right">
+          <div class="trader__left">
             <p>Multiply Market`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the Multiply Market Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
             <p>Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the Multiply Market Online Trader.</p>
             <ul>
@@ -72,7 +72,7 @@
             </ul>
             <a class="button  button--title" href="#">Go to web trader</a>
           </div>
-          <div class="trader__left">
+          <div class="trader__right">
             <img src="../img/mobile.png" alt=""><br>
           </div>
         </div>
