--- a/mm/sass/blocks/title.scss
+++ b/mm/sass/blocks/title.scss
@@ -1,27 +1,26 @@
 .title { 
-  margin-top: 120px;
+  margin-top: 100px;
   color: #fff;
   
-  & h1 {
+  h1 {
     margin-bottom: 30px;
     font-size: 60px;
     font-family: 'SF UI Display Black', sans-serif;
     text-transform: uppercase;
   }
   
-  & p {
+  p {
     margin-bottom: 75px;
     font-size: 22px;
     font-style: italic;
-    font-weight: 100;
     font-family: 'SF UI Text Regular', sans-serif;
-    opacity: 0.6;
+    opacity: 0.7;
   }
 }
 
 .title--about {
   
-  & h1 {
+  h1 {
     margin: 0;
     font-size: 50px;
   }
@@ -32,12 +31,12 @@
   padding-top: 40px;
   padding-bottom: 20px;
   
-  & h1 {
+  h1 {
     margin: 0;
     font-size: 50px;
   }
   
-  & p {
+  p {
     width: 500px;
     margin-bottom: 0;
   }
@@ -45,7 +44,7 @@
 
 .title--platform {
   
-  & h1 {
+  h1 {
     margin-bottom: 0;
     font-size: 50px;
   }
@@ -53,12 +52,12 @@
 
 .title--spread {
   
-  & h1 {
+  h1 {
     margin: 0;
     font-size: 50px;
   }
   
-  & p {
+  p {
     margin-bottom: 40px;
   }
 }
