--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="account">
+  <section class="temp  temp--account">
     <header class="header  header--temp">
       <div class="container">
         <nav class="main-nav">
