--- a/mm/templates/signals.html
+++ b/mm/templates/signals.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <section class="signals">
+  <section class="temp  temp--signals">
     <header class="header">
       <div class="container">
         <nav class="main-nav">
