--- a/mm/sass/blocks/platform.scss
+++ b/mm/sass/blocks/platform.scss
@@ -27,12 +27,12 @@
   width: 500px;
   color: #fff;
   
-  & b {
+  b {
     font-size: 30px;
     font-family: 'SF UI Text Heavy', sans-serif;
   }
   
-  & ul {
+  ul {
     font-size: 18px;
     font-family: 'SF UI Text Regular', sans-serif;
     list-style-image: url('../img/r-arrow-s.png');
@@ -42,13 +42,13 @@
 .platform-plus {
   padding: 70px 0;
   
-  & h1 {
+  h1 {
     margin-top: 0;
     font-size: 30px;
     font-family: 'SF UI Text Heavy', sans-serif;
   }
   
-  & ul {
+  ul {
     font-size: 20px;
     font-family: 'SF UI Text Regular', sans-serif;
     list-style-image: url('../img/r-arrow-s.png');
