--- a/mm/sass/blocks/spread.scss
+++ b/mm/sass/blocks/spread.scss
@@ -7,16 +7,16 @@
   color: #fff;
   font-family: 'SF UI Display Regular', sans-serif;
   
-  & b {
+  b {
     font-size: 30px;
     text-transform: uppercase;
   }
   
-  & p {
+  p {
     font-size: 20px;
   }
   
-  & ul {
+  ul {
     font-size: 18px;
     list-style-image: url('../img/r-arrow-s.png');
   }
