--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -53,7 +53,7 @@
             </ul>
           </li>
       </ul>
-      <div class="title  title--about">
+      <div class="title  title--down">
         <h1>Trade with MultiplyMarket</h1>
         <p class="title__sub">Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities.<br>We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
         <a href="register.html" class="button  button--title">Open account</a>
