--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -355,33 +355,6 @@ body {
 .trading__box--algo {
   background: url("../img/trading-4.png") no-repeat top; }
 
-@media screen and (max-width: 1200px) {
-  .trading__img {
-    display: none; }
-  .trading__left {
-    width: auto; }
-  .trading__flex {
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
-  .trading__box {
-    width: 300px; } }
-
-@media screen and (max-width: 768px) {
-  .trading__flex {
-    padding-top: 0; }
-  .trading__flex--second {
-    padding-bottom: 0; }
-  .trading__left {
-    text-align: center; }
-    .trading__left b {
-      font-size: 30px; }
-  .trading__box {
-    width: auto;
-    padding-bottom: 50px; } }
-
 .trade {
   padding: 80px 0; }
   .trade video {
@@ -431,33 +404,6 @@ body {
   -ms-flex-item-align: center;
   align-self: center; }
 
-@media screen and (max-width: 1200px) {
-  .trade__flex {
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap; }
-  .trade__left {
-    width: auto;
-    margin: auto; }
-  .trade__right {
-    margin: auto; } }
-
-@media screen and (max-width: 768px) {
-  .trade {
-    padding: 50px 0; }
-  .trade__left h1 {
-    font-size: 30px; }
-  .trade__left p {
-    font-size: 18px; }
-  .trade__right {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding-top: 30px; }
-    .trade__right video {
-      width: 300px; }
-  .trade__link {
-    text-align: center; } }
-
 .edge {
   background: url("../img/edge.png") no-repeat;
   background-attachment: fixed; }
@@ -481,11 +427,6 @@ body {
     font-family: 'SF UI Display', sans-serif; }
   .edge__box p {
     font-family: 'SF UI Display', sans-serif; }
-
-@media screen and (max-width: 768px) {
-  .edge__flex {
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap; } }
 
 .live {
   padding: 80px 0; }
@@ -582,7 +523,6 @@ body {
   justify-content: space-between; }
 
 .title {
-  margin-top: 100px;
   color: #fff; }
   .title h1 {
     margin-bottom: 30px;
@@ -596,34 +536,14 @@ body {
     font-family: 'SF UI Text Regular', sans-serif;
     opacity: 0.7; }
 
-.title--about h1 {
-  margin: 0;
-  font-size: 50px; }
+.title--down {
+  margin-top: 100px; }
 
-.title--account {
-  margin: 0;
-  padding-top: 40px;
-  padding-bottom: 20px; }
-  .title--account h1 {
-    margin: 0;
-    font-size: 50px; }
-  .title--account p {
-    width: 500px;
-    margin-bottom: 0; }
-
-.title--platform h1 {
-  margin-bottom: 0;
-  font-size: 50px; }
-
-.title--spread h1 {
-  margin: 0;
-  font-size: 50px; }
-
-.title--spread p {
-  margin-bottom: 40px; }
+.title--up {
+  margin-top: 20px; }
 
 .title__sub {
-  margin-top: 20px;
+  margin-top: 0px;
   font-size: 18px !important;
   font-style: italic;
   font-family: 'SF UI Text Regular', sans-serif;
@@ -680,15 +600,6 @@ body {
   .give__box p {
     font-family: 'SF UI Display', sans-serif;
     opacity: 0.6; }
-
-@media screen and (max-width: 768px) {
-  .give h1 {
-    font-size: 30px; }
-  .give__flex {
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap; }
-  .give__box {
-    margin: auto; } }
 
 .table {
   width: 100%;
@@ -819,9 +730,10 @@ body {
   background: #646464 url("../img/t-bg-2.png") no-repeat top;
   background-size: cover; }
   .register h1 {
+    margin-top: 50px;
     margin-bottom: 0;
     color: #fff;
-    font-size: 50px;
+    font-size: 60px;
     font-family: 'SF UI Display Black', sans-serif;
     text-transform: uppercase; }
 
@@ -904,13 +816,13 @@ body {
   background-size: cover; }
 
 .segregated__content {
-  padding-top: 40px;
+  padding-top: 50px;
   padding-bottom: 50px;
   color: #fff; }
   .segregated__content h1 {
     margin: 0;
     margin-bottom: 10px;
-    font-size: 50px;
+    font-size: 60px;
     font-family: 'SF UI Display Black', sans-serif;
     text-transform: uppercase; }
   .segregated__content b {
@@ -943,8 +855,8 @@ body {
   color: #fff;
   padding-bottom: 50px; }
   .trader__content h1 {
-    margin-top: 120px;
-    font-size: 50px;
+    margin-top: 50px;
+    font-size: 60px;
     font-family: 'SF UI Display Black', sans-serif;
     text-align: center;
     text-transform: uppercase; }
