--- a/mm/sass/blocks/content.scss
+++ b/mm/sass/blocks/content.scss
@@ -3,18 +3,18 @@
   padding-bottom: 70px;
   color: #fff;
   
-  & b {
+  b {
     font-size: 30px;
     font-family: 'SF UI Display Black', sans-serif;
   }
   
-  & p {
+  p {
     font-size: 20px;
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
   }
   
-  & ul {
+  ul {
     font-size: 18px;
     font-family: 'SF UI Display Regular', sans-serif;
     list-style-image: url('../img/r-arrow-s.png');
