--- a/mm/sass/blocks/edge.scss
+++ b/mm/sass/blocks/edge.scss
@@ -16,12 +16,12 @@
   text-align: center;
   background: url('../img/edge-box.png') no-repeat top;
   
-  & b {
+  b {
     font-size: 30px;
     font-family: 'SF UI Display', sans-serif;
   }
   
-  & p {
+  p {
     font-family: 'SF UI Display', sans-serif;
   }
 }
@@ -31,7 +31,7 @@
 }
 
 @media screen and ($mobile-widths) {
-  .edge__flex {
-    flex-wrap: wrap;
-  }
+  // .edge__flex {
+  //   flex-wrap: wrap;
+  // }
 }
