--- a/mm/sass/blocks/footer.scss
+++ b/mm/sass/blocks/footer.scss
@@ -2,19 +2,19 @@
   padding: 50px 0 10px 0;
   background: #212121;
   
-  & b {
+  b {
     display: block;
     margin-bottom: 10px;
     color: #fff;
     font-family: 'SF UI Display Heavy', sans-serif;
   }
   
-  & ul {
+  ul {
     font-family: 'SF UI Display Light', sans-serif;
     list-style-image: url('../img/r-arrow-s.png');
     list-style-position: inside;
     
-    & a {
+    a {
       color: #818181;
       text-decoration: none;
       transition: 0.2s;
@@ -25,7 +25,7 @@
     }
   }
   
-  & h1 {
+  h1 {
     color: #fff;
     font-size: 25px;
     font-family: 'SF UI Display Heavy', sans-serif;
@@ -33,13 +33,13 @@
     text-transform: uppercase;
   }
   
-  & p {
+  p {
     color: #818181;
     font-family: 'SF UI Display Regular', sans-serif;
     text-align: center;
   }
   
-  & hr {
+  hr {
     opacity: 0.2;
   }
 }
