--- a/mm/sass/blocks/live.scss
+++ b/mm/sass/blocks/live.scss
@@ -1,14 +1,14 @@
 .live {
   padding: 80px 0;
   
-  & h1 {
+  h1 {
     font-size: 30px;
     font-family: 'SF UI Display Bold', sans-serif;
     text-align: center;
     text-transform: uppercase;
   }
   
-  & iframe {
+  iframe {
     width: 100%;
     height: 520px;
   }
