--- a/mm/sass/blocks/register.scss
+++ b/mm/sass/blocks/register.scss
@@ -2,10 +2,11 @@
   background: #646464 url('../img/t-bg-2.png') no-repeat top;
   background-size: cover;
   
-  & h1 {
+  h1 {
+    margin-top: 50px;
     margin-bottom: 0;
     color: #fff;
-    font-size: 50px;
+    font-size: 60px;
     font-family: 'SF UI Display Black', sans-serif;
     text-transform: uppercase;
   }
@@ -34,12 +35,12 @@
   transition: 0.2s;
   opacity: 0.7;
   
-  & b {
+  b {
     font-size: 22px;
     font-family: 'SF UI Display Black', sans-serif;
   }
   
-  & p {
+  p {
     font-size: 18px;
     font-family: 'SF UI Display Regular', sans-serif;
   }
