--- a/mm/sass/blocks/start.scss
+++ b/mm/sass/blocks/start.scss
@@ -1,28 +1,28 @@
 .start {
   padding: 50px 0 70px 0;
   
-  & h1 {
+  h1 {
     margin-top: 0;
   }
   
-  & h2 {
+  h2 {
     margin-top: 70px;
     margin-bottom: 0;
   }
   
-  & h1, h2 {
+  h1, h2 {
     font-size: 40px;
     font-family: 'SF UI Display Black', sans-serif;
     text-align: center;
     text-transform: uppercase;
   }
   
-  & p {
+  p {
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
   }
   
-  & .button {
+  .button {
     display: block;
     width: 150px;
     margin: auto;
