--- a/mm/sass/blocks/steps.scss
+++ b/mm/sass/blocks/steps.scss
@@ -1,19 +1,19 @@
 .steps {
   padding: 70px 0 54px 0;
   
-  & h1 {
+  h1 {
     margin: 0;
     margin-bottom: 10px;
     font-size: 30px;
     font-family: 'SF UI Display Black', sans-serif;
   }
   
-  & b {
+  b {
     font-size: 20px;
     font-family: 'SF UI Display Regular', sans-serif;
   }
   
-  & p {
+  p {
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
   }
