--- a/mm/sass/blocks/sub-nav.scss
+++ b/mm/sass/blocks/sub-nav.scss
@@ -8,11 +8,11 @@
   padding-left: 0;
   list-style: none;
   
-  & li {
+  li {
     position: relative;
   }
   
-  & a {
+  a {
     padding-bottom: 15px;
     color: #fff;
     font-size: 14px;
@@ -41,7 +41,7 @@
   z-index: 2;
   transition: 0.2s;
   
-  & a {
+  a {
     display: block;
     padding: 10px 20px;
     background: none;
