--- a/mm/sass/blocks/table.scss
+++ b/mm/sass/blocks/table.scss
@@ -2,15 +2,15 @@
   width: 100%;
   padding-bottom: 85px;
   
-  & th {
+  th {
     
-    & b {
+    b {
       color: $sc;
       font-size: 20px;
       font-family: 'SF UI Display Black', sans-serif;
     }
     
-    & p {
+    p {
       margin-top: 20px;
       color: #fff;
       font-size: 13px;
@@ -18,7 +18,7 @@
       opacity: 0.6;
     }
     
-    & span {
+    span {
       display: block;
       margin-bottom: 13px;
       color: #fff;
@@ -27,7 +27,7 @@
     }
   }
   
-  & td {
+  td {
     padding: 10px 0;
     color: #fff;
     font-size: 18px;
@@ -50,12 +50,12 @@
   border-collapse: collapse;
   text-align: center;
   
-  & tr {
+  tr {
     border: 1px solid $sc;
     
   }
   
-  & th {
+  th {
     padding: 5px;
   }
 }
