--- a/mm/sass/blocks/trading.scss
+++ b/mm/sass/blocks/trading.scss
@@ -18,13 +18,13 @@
   align-self: center;
   width: 500px;
   
-  & b {
+  b {
     font-size: 40px;
     text-transform: uppercase;
     font-family: 'SF UI Display Black', sans-serif;
   }
   
-  & p {
+  p {
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
   }
@@ -38,19 +38,19 @@
   width: 250px;
   text-align: center;
   
-  & img {
+  img {
     display: block;
     width: 200px;
     margin: auto;
   }
   
-  & b {
+  b {
     font-size: 20px;
     font-family: 'SF UI Display Bold', sans-serif;
     text-transform: uppercase;
   }
   
-  & p {
+  p {
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
   }
@@ -69,43 +69,43 @@
 }
 
 @media screen and ($tablet-widths) {
-  .trading__img {
-    display: none;
-  }
-  
-  .trading__left {
-    width: auto;
-  }
-  
-  .trading__flex {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .trading__box {
-    width: 300px;
-  }
+  // .trading__img {
+  //   display: none;
+  // }
+  // 
+  // .trading__left {
+  //   width: auto;
+  // }
+  // 
+  // .trading__flex {
+  //   flex-wrap: wrap;
+  //   justify-content: center;
+  // }
+  // 
+  // .trading__box {
+  //   width: 300px;
+  // }
 }
 
 @media screen and ($mobile-widths) {
-  .trading__flex {
-    padding-top: 0;
-  }
-  
-  .trading__flex--second {
-    padding-bottom: 0;
-  }
-  
-  .trading__left {
-    text-align: center;
-    
-    & b {
-      font-size: 30px;
-    }
-  }
-  
-  .trading__box {
-    width: auto;
-    padding-bottom: 50px;
-  }
+  // .trading__flex {
+  //   padding-top: 0;
+  // }
+  // 
+  // .trading__flex--second {
+  //   padding-bottom: 0;
+  // }
+  // 
+  // .trading__left {
+  //   text-align: center;
+  // 
+  //   b {
+  //     font-size: 30px;
+  //   }
+  // }
+  // 
+  // .trading__box {
+  //   width: auto;
+  //   padding-bottom: 50px;
+  // }
 }
