--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -53,7 +53,7 @@
             </ul>
           </li>
       </ul>
-      <div class="title  title--account">
+      <div class="title  title--up">
         <h1>Account types</h1>
         <p class="title__sub">Our accounts provide benefits of Forex market to private and corporate clients, using one of the most advanced trading platform available.</p>
       </div>
