--- a/mm/templates/account-funding.html
+++ b/mm/templates/account-funding.html
@@ -53,7 +53,7 @@
             </ul>
           </li>
       </ul>
-      <div class="title  title--about">
+      <div class="title">
         <h1>Account Funding</h1>
       </div>
       <div class="content">
