--- a/mm/templates/platform.html
+++ b/mm/templates/platform.html
@@ -53,7 +53,7 @@
             </ul>
           </li>
       </ul>
-      <div class="title  title--platform">
+      <div class="title">
         <h1>Multiply Market Trade Meta Trader 4</h1>
         <p class="title__sub">The Multiply Market Meta Trader Four provides the optimal platform for making the most out of Forex trading</p>
       </div>
