--- a/mm/templates/spread.html
+++ b/mm/templates/spread.html
@@ -53,7 +53,7 @@
             </ul>
           </li>
       </ul>
-      <div class="title  title--spread">
+      <div class="title">
         <h1>Spread and Trading hours</h1>
         <p class="title__sub">Dealing with MultiplyMarket, you’ll obtain a fixed range of spreads for a wide specter of currency pairs, available 24/7. Free of strict margin boundaries, it empowers you to trade using more profitable conditions.</p>
       </div>
