--- a/mm/templates/glossary.html
+++ b/mm/templates/glossary.html
@@ -53,7 +53,7 @@
             </ul>
           </li>
       </ul>
-      <div class="title  title--about">
+      <div class="title">
         <h1>Trade Glossary</h1>
       </div>
       <div class="content">                                                         
