--- a/mm/templates/signals.html
+++ b/mm/templates/signals.html
@@ -53,7 +53,7 @@
             </ul>
           </li>
       </ul>
-      <div class="title  title--about">
+      <div class="title">
         <h1>Forex Signals</h1>
         <p class="title__sub">At MultiplyMarket we provide the best forex signals by working closely with technology providers who are at the forefront of the industry.<br>To get a different perspective on Commodities, Indices, Currency Pairs, and Stocks, you can change the Time Frame.</p>
       </div>
