--- a/forex/sass/blocks/careers.scss
+++ b/forex/sass/blocks/careers.scss
@@ -1,7 +1,7 @@
 .careers {
   padding-top: 34px;
   
-  & p {
+  p {
     color: #000e55;
   }
 }
@@ -18,7 +18,7 @@
   padding-top: 130px;
   text-align: center;
   
-  & a {
+  a {
     color: #000e55;
     text-decoration: none;
     transition: 0.3s;
