--- a/forex/sass/blocks/platforms.scss
+++ b/forex/sass/blocks/platforms.scss
@@ -2,17 +2,17 @@
   padding-top: 50px;
   background: url('../img/platforms-bg.png') no-repeat top;
   
-  & h2 {
+  h2 {
     color: #fff;
     font-size: 25px;
   }
   
-  & h3 {
+  h3 {
     color: #fff;
     font-size: 25px;
   }
   
-  & ul {
+  ul {
     width: 280px;
     color: #b7b5c9;
     font-weight: 500;
