--- a/forex/sass/blocks/scroll.scss
+++ b/forex/sass/blocks/scroll.scss
@@ -17,13 +17,13 @@
   background-size: cover;
   background-attachment: fixed;
   
-  & p {
+  p {
     margin-top: 0;
     color: #fff;
     font-size: 20px;
   }
   
-  & a {
+  a {
     padding: 10px 30px;
     color: $mc;
     font-weight: bold;
@@ -39,7 +39,7 @@
     }
   }
   
-  & small {
+  small {
     display: block;
     margin-top: 20px;
     color: #fff;
@@ -58,18 +58,18 @@
 .scroll__box {
   text-align: center;
   
-  & b {
+  b {
     font-weight: bold;
     text-transform: uppercase;
   }
   
-  & p {
+  p {
     padding-bottom: 20px;
     font-size: 13px;
     opacity: 0.8;
   }
   
-  & a {
+  a {
     padding: 5px 15px;
     color: $mc;
     font-size: 12px;
@@ -104,7 +104,7 @@
   font-size: 18px;
   list-style-image: url("../img/li.png");
   
-  & li {
+  li {
     margin-bottom: 10px;
   }
 }
@@ -137,14 +137,14 @@
     background-attachment: fixed;
     text-align: center;
     
-    & p {
+    p {
       margin-top: 0;
       color: #fff;
       font-size: 16px;
       font-weight: bold;
     }
     
-    & a {
+    a {
       
       &:hover {
         color: $sc;
@@ -153,7 +153,7 @@
       }
     }
     
-    & small {
+    small {
       width: auto;
     }
   }
