--- a/forex/sass/blocks/about-us.scss
+++ b/forex/sass/blocks/about-us.scss
@@ -1,7 +1,7 @@
 .about {
   color: $mc;
   
-  & h1 {
+  h1 {
     margin-top: 40px;
     margin-bottom: 30px;
     font-size: 20px;
@@ -9,11 +9,11 @@
     opacity: 0.9;
   } 
   
-  & p {
+  p {
     opacity: 0.7;
   }
   
-  & b {
+  b {
     font-size: 22px;
     opacity: 0.9;
   }
