--- a/forex/sass/blocks/account-comparison.scss
+++ b/forex/sass/blocks/account-comparison.scss
@@ -1,18 +1,18 @@
 .account-comparison {
   padding-bottom: 50px;
   
-  & table {
+  table {
     width: 100%;
     color: #fff;
     font-size: 13px;
     text-align: center;
     border-collapse: collapse;
     
-    & th {
+    th {
       padding: 15px 0;
     }
     
-    & td {
+    td {
       padding: 5px;
       border-bottom: 1px solid #fff;
     }
@@ -25,8 +25,7 @@
   padding-top: 50px;
   padding-bottom: 20px;
   
-  & button {
-    // margin: 0 5px;
+  button {
     padding: 10px 45px;
     color: #fff;
     font-size: 15px;
@@ -65,10 +64,6 @@
   }
 }
 
-.test {
-  background: #9b9b9b !important;
-}
-
 .account-comparison__gold {
   
   &:hover {
@@ -76,9 +71,7 @@
   }
 }
 
-.account-comparison__free {
-
-}
+.account-comparison__free {}
 
 @media screen and ($tablet-widths) {}
 
@@ -86,7 +79,7 @@
   .account-comparison__control {
     flex-direction: column;
     
-    & button {
+    button {
       width: 220px;
       margin: auto;
       margin-bottom: 20px;
