--- a/forex/sass/blocks/adv.scss
+++ b/forex/sass/blocks/adv.scss
@@ -1,18 +1,18 @@
 .adv {
   text-align: center;
   
-  & b {
+  b {
     font-size: 20px;
   }
   
-  & img {
+  img {
     display: block;
     margin: auto;
     margin-top: 40px;
     margin-bottom: 40px;
   }
   
-  & p {
+  p {
     margin: 0;
     font-size: 14px;
     opacity: 0.7;
@@ -31,9 +31,7 @@
   width: 300px;
 }
 
-@media screen and ($tablet-widths) {
-  
-}
+@media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {  
   .adv__flex {
