--- a/forex/sass/blocks/edge.scss
+++ b/forex/sass/blocks/edge.scss
@@ -2,11 +2,11 @@
   width: 600px;
   margin: auto;
   
-  & h3 {
+  h3 {
     margin-top: 0;
   }
   
-  & ul {
+  ul {
     width: auto;
   }
 }
@@ -17,7 +17,7 @@
   .edge {
     width: auto;  
     
-    & h3 {
+    h3 {
       text-align: center;
     }
   }
