--- a/forex/sass/blocks/funding.scss
+++ b/forex/sass/blocks/funding.scss
@@ -1,6 +1,6 @@
 .funding {
   
-  & table {
+  table {
     width: 100%;
     margin-top: 40px;
     margin-bottom: 30px;
@@ -8,12 +8,12 @@
     border-collapse: collapse;
   }
   
-  & tr {
+  tr {
     height: 100px;
     border-bottom: 1px solid rgba(19, 0, 133, 0.5);
   }
   
-  & p {
+  p {
     color: #323232;
     text-align: right;
   }
@@ -48,12 +48,12 @@
 @media screen and ($mobile-widths) {    
   .funding {
     
-    & tr {
+    tr {
       height: 70px;
       font-size: 10px;
     }
     
-    & p {
+    p {
       text-align: center;
     }
   }
