--- a/forex/sass/blocks/global.scss
+++ b/forex/sass/blocks/global.scss
@@ -1,14 +1,13 @@
 .global {
   background: url('../img/global.png') no-repeat;
-  // background-size: cover;
   
-  & p {
+  p {
     margin-top: 0;
     color: white;
     font-weight: bold;
   }
   
-  & a {
+  a {
     padding: 10px 30px;
     color: $mc;
     font-weight: bold;
@@ -24,7 +23,7 @@
     }
   }
   
-  & small {
+  small {
     display: block;
     margin-top: 20px;
     color: #fff;
@@ -57,7 +56,7 @@
   font-weight: bold;
   list-style-image: url("../img/li.png");
   
-  & li {
+  li {
     margin-bottom: 10px;
   }
 }
@@ -83,7 +82,7 @@
     background: url('../img/global.png') no-repeat;
     background-size: cover;
     
-    & small {
+    small {
       width: auto;
     }
   }
