--- a/forex/sass/blocks/glossary.scss
+++ b/forex/sass/blocks/glossary.scss
@@ -1,7 +1,7 @@
 .resources {
   padding: 50px 0 100px 0;
   
-  & hr {
+  hr {
     height: 2px;
     margin: 50px 0;
     border: none;
@@ -16,7 +16,7 @@
   flex-wrap: wrap;
   margin: auto;
   
-  & a {
+  a {
     width: 70px;
     height: 70px;
     padding-top: 5px;
@@ -45,7 +45,7 @@
 .resources__text {
   color: $mc;
   
-  & b {
+  b {
     font-size: 20px;
     text-transform: uppercase;
   }
@@ -55,21 +55,21 @@
   display: flex;
   flex-direction: column;
   
-  & h3 {
+  h3 {
     margin-bottom: 0;
     color: $mc;
     font-size: 30px;
     text-transform: uppercase;
   }
   
-  & b {
+  b {
     padding-bottom: 30px;
     color: $mc;
     font-size: 18px;
     text-transform: uppercase;
   }
   
-  & a {
+  a {
     position: relative;
     margin-bottom: 10px;
     padding: 25px;
@@ -117,7 +117,7 @@
   
   .resources__text {
     
-    & p {
+    p {
       text-align: center;
     }
   }
@@ -125,7 +125,7 @@
   .resources__faq {
     text-align: center;
     
-    & a {
+    a {
       padding: 70px 0 20px 0;
       background: url('../img/faq.png') no-repeat top;
     }
