--- a/forex/sass/blocks/page-footer.scss
+++ b/forex/sass/blocks/page-footer.scss
@@ -5,18 +5,18 @@
   border-image: url("../img/footer-gold.png") 3 0 0 repeat;
   background: #323232;
   
-  & b {
+  b {
     font-size: 16px;
     text-transform: uppercase;
     opacity: 0.8;
   }
 
-  & p {
+  p {
     margin-top: 0;
     font-size: 10px;
   }
   
-  & a {
+  a {
     margin-right: 10px;
     color: white;
     text-decoration: none;
@@ -32,10 +32,6 @@
   display: flex;
   justify-content: space-around;
   padding-top: 35px;
-}
-
-.page-footer__left-column {
-  
 }
 
 .page-footer__right-column {
@@ -132,7 +128,7 @@
   padding-bottom: 20px;
   text-align: center;
   
-  & p {
+  p {
     font-size: 14px;
   }
 }
@@ -152,7 +148,7 @@
   
   .page-footer {
     
-    & b {
+    b {
       font-size: 16px;
     }
   }
@@ -165,9 +161,8 @@
   }
   
   .page-footer {
-    // text-align: center;
     
-    & a {
+    a {
       margin-right: 0;
     }
   }
@@ -202,39 +197,8 @@
     padding-top: 15px;
     text-align: left;
     
-    & a {
+    a {
       margin-bottom: 10px;
     }
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
