--- a/forex/sass/blocks/trading.scss
+++ b/forex/sass/blocks/trading.scss
@@ -1,18 +1,12 @@
-.trading {
-  // min-height: 550px;
-}
+.trading {}
 
 .trading__flex {
   display: flex;
   justify-content: space-around;
-  // padding-top: 50px;
-  // padding-bottom: 80px;
   
-  & p {
+  p {
     width: 500px;
-    // padding-top: 130px;
     align-self: center;
-    // text-align: center;
     opacity: 0.7;
   }
 }
@@ -22,7 +16,6 @@
   padding: 10px 0;
   color: $mc;
   font-size: 30px;
-  // background: $mc;
   text-align: center;
 }
 
@@ -50,7 +43,7 @@
     padding-top: 0;
     padding-bottom: 0;
     
-    & p {
+    p {
       width: auto;
       padding-top: 0;
     }
